<resources>
    <string name="app_name">中环检查</string>
    <string name="login_button_title">中环市容环境实效检查考评系统</string>
    <string name="login_button_login">登录</string>
    <string name="login_text_name">登录名</string>
    <string name="login_text_password">密码</string>

    <string name="main_button_update">更新参数</string>
    <string name="main_button_collection">定点采集</string>
    <string name="main_title">功能选择</string>

    <string name="collection_list_title">采集列表</string>
    <string name="collection_list_button_refresh">刷新</string>
    <string name="collection_list_button_detail">详细</string>
    <string name="collection_list_button_back">返回</string>
    <string name="collection_list_button_road">道路排序</string>
    <string name="collection_list_button_time">时间排序</string>

    <string name="collection_title">信息采集</string>
    <string name="collection_button_send">发送</string>
    <string name="collection_button_album">相册</string>
    <string name="collection_button_upload">拍照</string>
    <string name="collection_button_back">返回</string>
    <string name="collection_toolbar">上一次采集</string>
    <string name="collection_shop_title">商铺</string>

</resources>
