<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_return"
        android:icon="@drawable/ic_arrow_back_black_24dp"
        android:title="@string/collection_list_button_back" />
    <item
        android:id="@+id/navigation_road"
        android:icon="@drawable/ic_streetview_black_24dp"
        android:title="@string/collection_list_button_road" />
    <item
        android:id="@+id/navigation_time"
        android:icon="@drawable/ic_access_time_black_24dp"
        android:title="@string/collection_list_button_time" />
    <item
        android:id="@+id/navigation_refresh"
        android:icon="@drawable/ic_replay_black_24dp"
        android:title="@string/collection_list_button_refresh" />

    <item
        android:id="@+id/navigation_detail"
        android:icon="@drawable/ic_arrow_forward_black_24dp"
        android:title="@string/collection_list_button_detail" />

</menu>
